--- a/.github/workflows/modified.yaml
+++ b/.github/workflows/modified.yaml
@@ -15,16 +15,17 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        with:
-          ref: main
-
-      # CINTENT >> INSERT_CINTENT
-      - uses: JavidDitty/setup-cintent@a606c80c34ec190c6a20dea33d6d58ddb6c4e0cc
+        # CINTENT >> CANT_RUN
+        # with:
+        #   ref: main
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: 3.13
+      
+      # CINTENT >> INSERT_CINTENT
+      - uses: JavidDitty/setup-cintent@3e5b2faf83a2ad32c22a1cd0f86f5f20ea53a5ab
 
       - name: Install Requirements
         run: |
